--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["rlib"]
 
 [profile.release]
 lto = true
@@ -33,8 +33,11 @@ serde-inline-default = "0.2.0"
 regex = "1"
 lazy_static = "1"
 swc_core = { version = "26", features = [
-  "ecma_plugin_transform",
   "ecma_parser",
+  "ecma_visit",
+  "ecma_ast",
+  "common",
+  "ecma_transforms",
 ] }
 
 ts-rs = "10"
