--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,15 @@ edition = "2021"
 crate-type = ["rlib"]
 
 [profile.release]
+# This removes more dead code
+codegen-units = 1
 lto = true
+
+# Optimize for size
+opt-level = "s"
+
+# Strip debug symbols
+strip = "symbols"
 
 [dependencies]
 
@@ -32,7 +40,7 @@ serde_json = "1"
 serde-inline-default = "1.0.0"
 regex = "1"
 lazy_static = "1"
-swc_core = { version = "46", features = [
+swc_core = { version = "47", features = [
   "ecma_parser",
   "ecma_visit",
   "ecma_ast",
@@ -43,7 +51,7 @@ swc_core = { version = "46", features = [
 ts-rs = "11"
 
 [dev-dependencies]
-testing = "17"
+testing = "18"
 # .cargo/config defines few alias to build plugin.
 # cargo build-wasip1 generates wasm-wasi32 binary
 # cargo build-wasm32 generates wasm32-unknown-unknown binary.
